--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>Toyin</html>
-<head>My code journey</head>
-<h1>visual code</h1>
-<colourh1>red</colourh1>
+<html>
+    |<h1>My coding lesson starts</h1>
+</html>
 <audio>Apex_Choir_-_Ebenezer_CeeNaija.com_</audio>
+<h2>
+    Today i was able to make my first edit without error. Atom is not working so i used visual studio editor am still learning.
+</h2>
+
