--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
-    |<h1>My coding lesson starts</h1>
-</html>
-<audio>Apex_Choir_-_Ebenezer_CeeNaija.com_</audio>
-<h2>
-    Today i was able to make my first edit without error. Atom is not working so i used visual studio editor am still learning.
-</h2>
+    <head></head>
+    <body>
+    <embed src="audio_file" autostart>
+    </embed>  
+</body>
+<head></head>
+<body>
+    <img src="logo.jpg" alt="natheve logo"
+</body>
+<head>
+    <meta charset="UTF-8">
+    <title>HTML font color</title>
+</head>
+<body>
+    <font color="purple">NATHEVE CO LTD</font>
+    <font face="cambiri"size=5>NATHEVE CO LTD</font>
+</body>
 
+</html>
